-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.1
-
None
-
Linux / Qt 5.4.1 (Ubuntu 15.04)
-
269fdbdd2bedda5f5eacb751224d3a3fc3eed5bc
Sorry that I bring this issue up again (QTBUG-43436 and QTBUG-44201 are closed), but I think that drag'n'drop to other applications still does not work in some cases which work with Qt 4 and GTK applications.
When I drag a file from pcmanfm-qt (from ppa:lubuntu-dev/lubuntu-daily) to Emacs or Firefox, it is not opened. Both things work if I use the GTK version of pcmanfm or a Qt4 filemanager like krusader. The same behavior can be seen with the qupzilla webbrowser instead of pcmanfm-qt, and I suppose that this would also be possible with a Qt5 build of dolphin (I do not have one).
A similar situation can be seen when dragging text: If I use the draggabletext demo from Qt4, I can drop text into Emacs, however, with the draggabletext example from Qt5, it does not work.
I had a look into x-dnd-handle-xdnd in xdnd.el from Emacs: It receives an XdndDrop message, but the value received by (x-get-selection-internal 'XdndSelection "text/uri-list") is nil, so it could be possible that the XdndSelection is cleared before Emacs can get it.
With other applications such as gvim or Qt applications drag'n'drop is working, however, it is important for me that it also works with Emacs and Firefox. Because I could reproduce it with all Qt5 applications I found and trying to fix it in pcmanfm-qt was not possible (it seems to be implemented correctly), I think that it could be an issue in Qt.
- relates to
-
QTBUG-47981 Drop events have broken mimeData()->urls() and text/uri-list.
-
- Closed
-
-
QTBUG-49947 Qt5.4 regression: Dropping text/urilist over browser windows stop working.
-
- Closed
-