xcb: Fix drag and drop to applications like Emacs and Chromium.

Drops without matching time stamp do not work. I have fixed the issue by
reanimating the findXdndAwareParent() function (adapted to XCB) and
using it to find a matching transaction if all else fails.

Task-number: QTBUG-45812
Change-Id: Ibca15bbab02ccf2f25280418e9edf36972ebf9a0
Reviewed-by: Błażej Szczygieł <spaz16@wp.pl>
Reviewed-by: Dmitry Shachnev <mitya57@gmail.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@theqtcompany.com>

cregit: 269fdbdd2bedda5f5eacb751224d3a3fc3eed5bc https://github.com/qt/qtbase/commit/269fdbdd2bedda5f5eacb751224d3a3fc3eed5bc